--- a/Podcast.html
+++ b/Podcast.html
@@ -30,9 +30,9 @@ Jonathan Kabongo
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">Landing</a></li>
-							<li><a href="generic.html">Generic</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="landing.html">Podcasts</a></li>
+							<li><a href="generic.html">Youtube</a></li>
+							<li><a href="elements.html">Blog Posts</a></li>
 						</ul>
 						<ul class="actions stacked">
 							<li><a href="#" class="button primary fit">Get Started</a></li>
@@ -51,7 +51,7 @@ Jonathan Kabongo
 								<h1>Podcasts</h1>
 							</header>
 							<div class="content">
-								<p>aw</p>
+								<p>  </p>
 							</div>
 						</div>
 					</section>
@@ -63,9 +63,9 @@ Jonathan Kabongo
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-									<a href="https://medium.com/@jonathan18/social-media-funerals-when-is-time-to-log-off-912501d43288"></a>
+
 									</header>
-									<p https://medium.com/@jonathan18/social-media-funerals-when-is-time-to-log-off-912501d43288 </p>
+									<p></p>
 								</div>
 							</section>
 
