--- a/blogs.html
+++ b/blogs.html
@@ -30,9 +30,13 @@
 					<ul class="links">
 						<li><a href="index.html">Home</a></li>
 						<li><a href="landing.html">Podcast</a></li>
-						<li><a href="generic.html">Youtube</a></li>
-						<li><a href="element.html">Blog Posts</a></li>
-
+						<li><a href="generic.html"Youtube</a></li>
+						<li><a href="elements.html">Blog Posts</a></li>
+					</ul>
+					<ul class="actions stacked">
+						<li><a href="#" class="button primary fit">Get Started</a></li>
+						<li><a href="#" class="button fit">Log In</a></li>
+					</ul>
 				</nav>
 				<!-- Main -->
 					<div id="main" class="alt">
@@ -92,4 +96,3 @@
 															</ul>
 
 														</div>
-												
