--- a/blogs.html
+++ b/blogs.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo"><strong>Jonathan</strong> <span>Kabongo</span></a>
+						<a href="home.html" class="logo"><strong>Jonathan</strong> <span>Kabongo</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -28,9 +28,9 @@
 				<!-- Menu -->
 				<nav id="menu">
 					<ul class="links">
-						<li><a href="index.html">Home</a></li>
+						<li><a href="home.html">Home</a></li>
 						<li><a href="landing.html">Podcast</a></li>
-						<li><a href="generic.html"Youtube</a></li>
+						<li><a href="generic.html" Youtube</a></li>
 						<li><a href="elements.html">Blog Posts</a></li>
 					</ul>
 					<ul class="actions stacked">
@@ -45,7 +45,8 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h1>Blog Posts</h1>
+
+										<h1><a href="blogs.html" class="Link">Blog Posts</a></h1>
 									</header>
 
 									<!-- Content -->
