--- a/elements.html
+++ b/elements.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="home.html" class="logo"><strong>Jonathan</strong> <span>Kabongo</span></a>
+						<a href="elements.html" class="logo"><strong>Jonathan</strong> <span>Kabongo</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -46,7 +46,7 @@
 								<div class="inner">
 									<header class="major">
 
-										<h1><a href="blogs.html" class="Link">Blog Posts</a></h1>
+										<h1><a href="elements.html" class="Link">Blog Posts</a></h1>
 									</header>
 
 									<!-- Content -->
