--- a/index.html
+++ b/index.html
@@ -19,21 +19,25 @@ Jonathan Kabongo
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<a href="index.html" class="logo"><strong>Jonathan</strong> <span>Kabongo</span></a>
+						<a href="Index.html" class="logo"><strong>Jonathan</strong> <span>Kabongo</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
 					</header>
 
 				<!-- Menu -->
-					<nav id="menu">
-						<ul class="links">
-							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">Podcast</a></li>
-							<li><a href="generic.html">Youtube</a></li>
-							<li><a href="elements.html">Blog Posts</a></li>
-
-					</nav>
+				<nav id="menu">
+					<ul class="links">
+						<li><a href="Index.html">Home</a></li>
+						<li><a href="Landing.html">Podcasts</a></li>
+						<li><a href="generic.html">Youtube</a></li>
+						<li><a href="elements.html">Blog Posts</a></li>
+					</ul>
+					<ul class="actions stacked">
+						<li><a href="#" class="button primary fit">Get Started</a></li>
+						<li><a href="#" class="button fit">Log In</a></li>
+					</ul>
+				</nav>
 
 				<!-- Banner -->
 					<section id="banner" class="major">
@@ -58,7 +62,7 @@ Jonathan Kabongo
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html"class="link">Youtube</a
+										<h3><a href="generic.html"class="link">Youtube</a
 										></h3>
 											<p>	Watch my videos here
 											</p>
@@ -69,7 +73,7 @@ Jonathan Kabongo
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Blog Posts</a></h3>
+										<h3><a href="elements.html" class="link">Blog Posts</a></h3>
 
 										<p>Read some of my articles here</p>
 									</header>
