--- a/elements.html
+++ b/elements.html
@@ -28,9 +28,9 @@
 				<!-- Menu -->
 				<nav id="menu">
 					<ul class="links">
-						<li><a href="home.html">Home</a></li>
+						<li><a href="Index.html">Home</a></li>
 						<li><a href="landing.html">Podcast</a></li>
-						<li><a href="generic.html" Youtube</a></li>
+						<li><a href="generic.html"> Youtube</a></li>
 						<li><a href="elements.html">Blog Posts</a></li>
 					</ul>
 					<ul class="actions stacked">
@@ -61,7 +61,7 @@
 												</p>
 											</div>
 											<div class="col-6 col-12-small">
-												<h3> Living With Albums In The Digital Album </h3>
+												<h3> Living With Albums In The Digital Age </h3>
 												<p>In a time where it's hard for an album to live longer than a week, we must still give bodies of work the patience they deserve. <a href="https://medium.com/@jonathan18/social-media-funerals-when-is-time-to-log-off-912501d43288"> Link To Article </a></p>
 											</div>
 
