--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ Jonathan Kabongo
 							<section id="one" class="tiles">
 								<article>
 									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="images/Headshot.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="generic.html"class="link">Youtube</a
@@ -70,7 +70,7 @@ Jonathan Kabongo
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
+										<img src="images/logo.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="elements.html" class="link">Blog Posts</a></h3>
@@ -80,7 +80,7 @@ Jonathan Kabongo
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
+										<img src="images/reflection.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">Podcast</a></h3>
@@ -89,7 +89,7 @@ Jonathan Kabongo
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
+										<img src="images/chapter17.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">Links</a></h3>
@@ -108,6 +108,7 @@ Jonathan Kabongo
 								<form method="post" action="#">
 									<div class="fields">
 										<div class="field half">
+
 											<label for="name">Name</label>
 											<input type="text" name="name" id="name" />
 										</div>
