--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@ Jonathan Kabongo
 				<nav id="menu">
 					<ul class="links">
 						<li><a href="Index.html">Home</a></li>
-						<li><a href="Landing.html">Podcasts</a></li>
-						<li><a href="generic.html">Youtube</a></li>
+						<li><a href="Generic.html">Podcasts</a></li>
+						<li><a href="landing.html">Youtube</a></li>
 						<li><a href="elements.html">Blog Posts</a></li>
 					</ul>
 					<ul class="actions stacked">
@@ -46,8 +46,8 @@ Jonathan Kabongo
 								<h1>Jonathan Kabongo</h1>
 							</header>
 							<div class="content">
-								<p>Writer, Artist and fan of self-expression  </p>
- 									<img src="images/Headshot.jpg" alt="" />
+								<p>Writer. Artist. Fan of self-expression  </p>
+ 									<img src="images/head.jpg" alt="" />
 							</div>
 						</div>
 					</section>
@@ -62,9 +62,10 @@ Jonathan Kabongo
 
 									</span>
 									<header class="major">
-										<h3><a href="generic.html"class="link">Youtube</a
+										<h3><a href="landing.html"class="link">Youtube</a
 										></h3>
-											<p>	Watch my videos here
+											<img src="images/tube.jpg" alt= ""/>
+											<p>	Check out the premiere of my new series "Rona Rounds"
 											</p>
 									</header>
 								</article>
@@ -73,8 +74,8 @@ Jonathan Kabongo
 									</span>
 									<header class="major">
 										<h3><a href="elements.html" class="link">Blog Posts</a></h3>
-
-										<p>Read some of my articles here</p>
+										<img src="images/medium.jpg"?>
+										<p>All thoughts and opinions on topics that intrigue me </p>
 									</header>
 								</article>
 								<article>
@@ -82,18 +83,11 @@ Jonathan Kabongo
 
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Podcast</a></h3>
-										<p>Listen to my podcasts here</p>
+										<h3><a href="Generic.html" class="link">Podcast</a></h3>
+										<img src= "images/soundcloud.jpg"/>
+
+										<p>Listen to me and friends talk about how we're creative in different fields</p>
 									</header>
-								</article>
-								<article>
-									<span class="image">
-									</span>
-									<header class="major">
-										<h3><a href="landing.html" class="link">Links</a></h3>
-										<p>See recommendations here</p>
-
-							</section>
 
 
 
@@ -101,13 +95,11 @@ Jonathan Kabongo
 
 
 
-							</ul>
-						</div>
-					</footer>
 
-			</div>
+
 
 		<!-- Scripts -->
+
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
