--- a/elements.html
+++ b/elements.html
@@ -29,8 +29,8 @@
 				<nav id="menu">
 					<ul class="links">
 						<li><a href="Index.html">Home</a></li>
-						<li><a href="landing.html">Podcast</a></li>
-						<li><a href="generic.html"> Youtube</a></li>
+						<li><a href="Generic.html">Podcast</a></li>
+						<li><a href="landing.html"> Youtube</a></li>
 						<li><a href="elements.html">Blog Posts</a></li>
 					</ul>
 					<ul class="actions stacked">
