--- a/elements.html
+++ b/elements.html
@@ -63,6 +63,7 @@
 											<div class="col-6 col-12-small">
 												<h3> Living With Albums In The Digital Age </h3>
 												<p>In a time where it's hard for an album to live longer than a week, we must still give bodies of work the patience they deserve. <a href="https://medium.com/@jonathan18/social-media-funerals-when-is-time-to-log-off-912501d43288"> Link To Article </a></p>
+												<i class="fab fa-medium"></i>
 											</div>
 
 
@@ -81,19 +82,6 @@
 
 															</ol>
 
-															<h4>Icons</h4>
-															<ul class="icons">
-																<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-																<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-																<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-																<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-																<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-																<li><a href="#" class="icon brands fa-tumblr"><span class="label">Tumblr</span></a></li>
-															</ul>
-															<ul class="icons">
-																<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-																<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-																<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-															</ul>
+														
 
 														</div>
