--- a/generic.html
+++ b/generic.html
@@ -52,6 +52,7 @@
 									<h2>CS and CW Collide</h2>
 
 									<p> <a href="https://soundcloud.com/ipr-firstandbest/turtles-podcast-final-cw-and-cs-collide"> Hear </a>  creative writing majors and computer science majors discuss how creativity is used in their respective fields. </p>
+									<i class="fab fa-soundcloud"></i>
 									<p></p>
 									<p></p>
 								</div>
