--- a/generic.html
+++ b/generic.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo"><strong>Jonathan</strong> <span>Kabongo</span></a>
+						<a href="generic.html" class="logo"><strong>Jonathan</strong> <span>Kabongo</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
