--- a/index.html
+++ b/index.html
@@ -83,11 +83,14 @@ Jonathan Kabongo
 
 									</span>
 									<header class="major">
-										<h3><a href="Generic.html" class="link">Podcast</a></h3>
+										<h3><a href="generic.html" class="link">Podcast</a></h3>
 										<img src= "images/soundcloud.jpg"/>
 
 										<p>Listen to me and friends talk about how we're creative in different fields</p>
 									</header>
+									<spa class="image">
+
+
 
 
 
