--- a/landing.html
+++ b/landing.html
@@ -65,9 +65,10 @@ Jonathan Kabongo
 								<div class="inner">
 									<header class="major">
 
-									<h1>Rona Rounds<h1/>
-										
+									<h3>Rona Rounds<h3/>
+									<p style="font-size:12px;"> Weekly sugegstions for albums to lift your spirit in these tough times.<a href=" https://www.youtube.com/watch?v=EuWSrUkS3IQ&feature=youtu.be"   </a> Watch Episode 1 now!</p>
 
+<i class="fab fa-youtube"></i>
 
 
 
