--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-Jonathan Kabongo
+Forty By HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
@@ -46,7 +46,7 @@ Jonathan Kabongo
 								<h1>Jonathan Kabongo</h1>
 							</header>
 							<div class="content">
-								<p>Writer. Artist. Fan of self-expression  </p>
+								<p>Writer. Artist. Fan of self-expression.  </p>
  									<img src="images/head.jpg" alt="" />
 							</div>
 						</div>
@@ -92,7 +92,10 @@ Jonathan Kabongo
 
 
 
-
+										<!-- Footer -->
+										<footer>
+											<small>&copy; Copyright 2020, Jonthan Kabongo</small>
+										</footer>
 
 
 
