--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ Forty By HTML5 UP
 							</header>
 							<div class="content">
 								<p>Writer. Artist. Fan of self-expression.  </p>
- 									<img src="images/head.jpg" alt="" />
+ 									<img src="images/head.jpg" alt=""/>
 							</div>
 						</div>
 					</section>
@@ -90,8 +90,7 @@ Forty By HTML5 UP
 									</header>
 									<spa class="image">
 
-
-
+									</div>
 										<!-- Footer -->
 										<footer>
 											<small>&copy; Copyright 2020, Jonthan Kabongo</small>
