--- a/index.html
+++ b/index.html
@@ -89,12 +89,22 @@ Forty By HTML5 UP
 										<p>Listen to me and friends talk about how we're creative in different fields</p>
 									</header>
 									<spa class="image">
+									</div>
+								</div>
+
+										<section id="Two">
+											
+
 
 									</div>
+
+
 										<!-- Footer -->
 										<footer>
 											<small>&copy; Copyright 2020, Jonthan Kabongo</small>
 										</footer>
+
+
 
 
 
