--- a/generic.html
+++ b/generic.html
@@ -53,7 +53,7 @@
 
 									<p> <a href="https://soundcloud.com/ipr-firstandbest/turtles-podcast-final-cw-and-cs-collide"> Hear </a>  creative writing majors and computer science majors discuss how creativity is used in their respective fields. </p>
 									<i class="fab fa-soundcloud"></i>
-									<p></p>
+									<p> <a href="https://www.inc.com/christina-desmarais/25-ways-to-be-more-creative.html"> Learn 25 ways to be creative   </p>
 									<p></p>
 								</div>
 							</section>
@@ -64,6 +64,10 @@
 
 
 				<!-- Footer -->
+				<footer>
+					<small>&copy; Copyright 2020, Jonthan Kabongo</small>
+				</footer>
+
 
 
 			</div>
