--- a/elements.html
+++ b/elements.html
@@ -62,12 +62,16 @@
 											</div>
 											<div class="col-6 col-12-small">
 												<h3> Living With Albums In The Digital Age </h3>
-												<p>In a time where it's hard for an album to live longer than a week, we must still give bodies of work the patience they deserve. <a href="https://medium.com/@jonathan18/social-media-funerals-when-is-time-to-log-off-912501d43288"> Link To Article </a></p>
+												<p>In a time where it's hard for an album to live longer than a week, we must still give bodies of work the patience they deserve. <a href="https://medium.com/@jonathan18/social-media-funerals-when-is-time-to-log-off-912501d43288" target="_blank"> Link To Article </a></p>
 												<i class="fab fa-medium"></i>
-											</div>
+
+									</div>
 
 
-
+											<!-- Footer -->
+											<footer>
+												<small>&copy; Copyright 2020, Jonthan Kabongo</small>
+											</footer>
 
 
 									<!-- Elements -->
@@ -82,6 +86,6 @@
 
 															</ol>
 
-														
+
 
 														</div>
