--- a/elements.html
+++ b/elements.html
@@ -55,15 +55,16 @@
 										<div class="row">
 											<div class="col-6 col-12-small">
 												<h3>Social Media Funerals: When Is It Time To Log Off? </h3>
-												<p> Kobe Bryant's sudden death shocked the world, is it okay to not want to grieve too much? <a href="https://medium.com/@jonathan18/social-media-funerals-when-is-time-to-log-off-912501d43288" targer="_blank">Link to Article </a>
+												<p> Kobe Bryant's sudden death shocked the world, is it okay to not want to grieve too much? <a href="https://medium.com/@jonathan18/social-media-funerals-when-is-time-to-log-off-912501d43288" target="_blank">Link to Article </a>
 
 											<a href=""></a>
 												</p>
 											</div>
 											<div class="col-6 col-12-small">
 												<h3> Living With Albums In The Digital Age </h3>
-												<p>In a time where it's hard for an album to live longer than a week, we must still give bodies of work the patience they deserve. <a href="https://medium.com/@jonathan18/social-media-funerals-when-is-time-to-log-off-912501d43288" target="_blank"> Link to article </a>
+										<p>In a time where it's hard for an album to live longer than a week, we must still give bodies of work the patience they deserve. <a href="https://medium.com/@jonathan18/living-with-albums-in-the-digital-age-917e45efce7f" target="_blank"> Link to article </a>
 												</p>
+
 												<i class="fab fa-medium"></i>
 
 									</div>
