--- a/elements.html
+++ b/elements.html
@@ -55,9 +55,9 @@
 										<div class="row">
 											<div class="col-6 col-12-small">
 												<h3>Social Media Funerals: When Is It Time To Log Off? </h3>
-												<p> Kobe Bryant's sudden death shocked the world, is it okay to not want to grieve too much? <a href="https://medium.com/@jonathan18/social-media-funerals-when-is-time-to-log-off-912501d43288" target="_blank">Link to Article </a>
+												<p> Kobe Bryant's sudden death shocked the world, is it okay to not want to grieve too much? <a href="https://medium.com/@jonathan18/social-media-funerals-when-is-time-to-log-off-912501d43288" target="_blank"> Link to Article </a> </p>
 
-											<a href=""></a>
+
 												</p>
 											</div>
 											<div class="col-6 col-12-small">
