--- a/landing.html
+++ b/landing.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-Jonathan Kabongo
+Forty By HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
@@ -66,9 +66,16 @@ Jonathan Kabongo
 									<header class="major">
 
 									<h3>Rona Rounds<h3/>
-									<p style="font-size:12px;"> Weekly sugegstions for albums to lift your spirit in these tough times.<a href=" https://www.youtube.com/watch?v=EuWSrUkS3IQ&feature=youtu.be"   </a> Watch Episode 1 now!</p>
+									<p style="font-size:12px;"> Every week. 3 albums. 3 Genres. .<a href=" https://www.youtube.com/watch?v=EuWSrUkS3IQ&feature=youtu.be"  </a> Click here for episode 1!</p>
+										<i class="fab fa-youtube"></i>
 
-<i class="fab fa-youtube"></i>
+									<img src="images/ronawalks.jpg">
+
+
+<!-- Footer -->
+<footer>
+	<small>&copy; Copyright 2020, Jonthan Kabongo</small>
+</footer>
 
 
 
