--- a/index.html
+++ b/index.html
@@ -47,8 +47,10 @@ Forty By HTML5 UP
 							</header>
 							<div class="content">
 								<p>Writer. Artist. Fan of self-expression.  </p>
- 									<img src="images/head.jpg" alt=""/>
+
 							</div>
+							<img src="images/head.jpg" alt=""/>
+
 						</div>
 					</section>
 
@@ -88,23 +90,19 @@ Forty By HTML5 UP
 
 										<p>Listen to me and friends talk about how we're creative in different fields</p>
 									</header>
-									<spa class="image">
-									</div>
-								</div>
-
-										<section id="Two">
-											
-
-
-									</div>
-
-
-										<!-- Footer -->
-										<footer>
-											<small>&copy; Copyright 2020, Jonthan Kabongo</small>
-										</footer>
-
-
+								</article>
+			</section>
+		</div>
+		<footer id="footer">
+			<div class="inner">
+				<ul class="copyright">
+					<li>© Jonathan Kabongo</li>
+					<li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+					<li>Images: <a href="https://unsplash.com">Unsplash</a></li>
+				</ul>
+			</div>
+		</footer>
+	</div>
 
 
 
