--- a/index.html
+++ b/index.html
@@ -91,6 +91,20 @@ Forty By HTML5 UP
 										<p>Listen to me and friends talk about how we're creative in different fields</p>
 									</header>
 								</article>
+								<article>
+									<span class="image">
+
+									</span>
+									<header class="major">
+										<h3><a href="landing.html"class="link">Links</a
+										></h3>
+											<img src="Images/mic.jpg" alt= ""/>
+											<p>	Vibes from me
+											</p>
+									</header>
+								</article>
+								<article>
+
 			</section>
 		</div>
 		<footer id="footer">
