--- a/landing.html
+++ b/landing.html
@@ -66,17 +66,26 @@ Forty By HTML5 UP
 									<header class="major">
 
 									<h3>Rona Rounds<h3/>
-									<p style="font-size:12px;"> Every week. 3 albums. 3 Genres. .<a href=" https://www.youtube.com/watch?v=EuWSrUkS3IQ&feature=youtu.be"  </a> Click here for episode 1!</p>
+									<p style="font-size:12px;"> Every week. 3 albums. 3 Genres. .<a href=" https://www.youtube.com/watch?v=EuWSrUkS3IQ&feature=youtu.be">  Click here for episode! </a> </p>
 										<i class="fab fa-youtube"></i>
 
 									<img src="images/ronawalks.jpg">
 
 
 <!-- Footer -->
-<footer>
-	<small>&copy; Copyright 2020, Jonthan Kabongo</small>
-</footer>
-
+</article>
+			</section>
+		</div>
+		<footer id="footer">
+			<div class="inner">
+				<ul class="copyright">
+					<li> © Jonathan Kabongo </li>
+					<li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+					<li>Images: <a href="https://unsplash.com">Unsplash</a></li>
+				</ul>
+			</div>
+		</footer>
+	</div>
 
 
 						<!-- Two -->
