--- a/elements.html
+++ b/elements.html
@@ -46,7 +46,8 @@
 								<div class="inner">
 									<header class="major">
 
-										<h1><a href="elements.html" class="Link">Blog Posts</a></h1>
+										<h1><a href="elements.html" class="Link">Blog Posts</a></h1> <img src="images/writing.jpg"
+
 									</header>
 
 									<!-- Content -->
@@ -71,9 +72,19 @@
 
 
 											<!-- Footer -->
-											<footer>
-												<small>&copy; Copyright 2020, Jonthan Kabongo</small>
-											</footer>
+										</article>
+		</section>
+	</div>
+	<footer id="footer">
+		<div class="inner">
+			<ul class="copyright">
+				<li>© Jonathan Kabongo</li>
+				<li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+				<li>Images: <a href="https://unsplash.com">Unsplash</a></li>
+			</ul>
+		</div>
+	</footer>
+</div>
 
 
 									<!-- Elements -->
