--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@ Forty By HTML5 UP
 						<li><a href="Generic.html">Podcasts</a></li>
 						<li><a href="landing.html">Youtube</a></li>
 						<li><a href="elements.html">Blog Posts</a></li>
+						<li><a href="elements2.html">Links</a></li>
+
 					</ul>
 					<ul class="actions stacked">
 						<li><a href="#" class="button primary fit">Get Started</a></li>
@@ -96,7 +98,7 @@ Forty By HTML5 UP
 
 									</span>
 									<header class="major">
-										<h3><a href="landing.html"class="link">Links</a
+										<h3><a href="elements2.html" class="link">Links</a
 										></h3>
 											<img src="Images/mic.jpg" alt= ""/>
 											<p>	Vibes from me
