--- a/index.html
+++ b/index.html
@@ -100,12 +100,12 @@ Forty By HTML5 UP
 									<header class="major">
 										<h3><a href="elements2.html" class="link">Links</a
 										></h3>
-											<img src="Images/mic.jpg" alt= ""/>
+											<img src="images/mic.jpg" alt= ""/>
 											<p>	Vibes from me
 											</p>
 									</header>
 								</article>
-								<article>
+
 
 			</section>
 		</div>
