--- a/elements.html
+++ b/elements.html
@@ -32,6 +32,7 @@
 						<li><a href="Generic.html">Podcast</a></li>
 						<li><a href="landing.html"> Youtube</a></li>
 						<li><a href="elements.html">Blog Posts</a></li>
+						<li><a href="elements2.html">Links</a></li>
 					</ul>
 					<ul class="actions stacked">
 						<li><a href="#" class="button primary fit">Get Started</a></li>
@@ -59,9 +60,7 @@
 												<p> Kobe Bryant's sudden death shocked the world, is it okay to not want to grieve too much? <a href="https://medium.com/@jonathan18/social-media-funerals-when-is-time-to-log-off-912501d43288" target="_blank"> Link to Article </a> </p>
 
 
-												</p>
-											</div>
-											<div class="col-6 col-12-small">
+		
 												<h3> Living With Albums In The Digital Age </h3>
 										<p>In a time where it's hard for an album to live longer than a week, we must still give bodies of work the patience they deserve. <a href="https://medium.com/@jonathan18/living-with-albums-in-the-digital-age-917e45efce7f" target="_blank"> Link to article </a>
 												</p>
