--- a/elements.html
+++ b/elements.html
@@ -28,17 +28,18 @@
 				<!-- Menu -->
 				<nav id="menu">
 					<ul class="links">
-						<li><a href="Index.html">Home</a></li>
-						<li><a href="Generic.html">Podcast</a></li>
-						<li><a href="landing.html"> Youtube</a></li>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="Generic.html">Podcasts</a></li>
+						<li><a href="landing.html">Youtube</a></li>
 						<li><a href="elements.html">Blog Posts</a></li>
-						<li><a href="elements2.html">Links</a></li>
+						<li><a href="elements2.html"> Links </a></li>
 					</ul>
 					<ul class="actions stacked">
 						<li><a href="#" class="button primary fit">Get Started</a></li>
 						<li><a href="#" class="button fit">Log In</a></li>
 					</ul>
 				</nav>
+
 				<!-- Main -->
 					<div id="main" class="alt">
 
@@ -60,7 +61,7 @@
 												<p> Kobe Bryant's sudden death shocked the world, is it okay to not want to grieve too much? <a href="https://medium.com/@jonathan18/social-media-funerals-when-is-time-to-log-off-912501d43288" target="_blank"> Link to Article </a> </p>
 
 
-		
+
 												<h3> Living With Albums In The Digital Age </h3>
 										<p>In a time where it's hard for an album to live longer than a week, we must still give bodies of work the patience they deserve. <a href="https://medium.com/@jonathan18/living-with-albums-in-the-digital-age-917e45efce7f" target="_blank"> Link to article </a>
 												</p>
