--- a/elements2.html
+++ b/elements2.html
@@ -25,20 +25,20 @@
 						</nav>
 					</header>
 
-				<!-- Menu -->
-				<nav id="menu">
-					<ul class="links">
-						<li><a href="Index.html">Home</a></li>
-						<li><a href="Generic.html">Podcast</a></li>
-						<li><a href="landing.html"> Youtube</a></li>
-						<li><a href="elements.html">Blog Posts</a></li>
-							<li><a href="elements2.html">Links</a></li>
-					</ul>
-					<ul class="actions stacked">
-						<li><a href="#" class="button primary fit">Get Started</a></li>
-						<li><a href="#" class="button fit">Log In</a></li>
-					</ul>
-				</nav>
+					<nav id="menu">
+						<ul class="links">
+							<li><a href="index.html">Home</a></li>
+							<li><a href="Generic.html">Podcasts</a></li>
+							<li><a href="landing.html">Youtube</a></li>
+							<li><a href="elements.html">Blog Posts</a></li>
+							<li><a href="elements2.html"> Links </a></li>
+						</ul>
+						<ul class="actions stacked">
+							<li><a href="#" class="button primary fit">Get Started</a></li>
+							<li><a href="#" class="button fit">Log In</a></li>
+						</ul>
+					</nav>
+
 				<!-- Main -->
 					<div id="main" class="alt">
 
@@ -104,6 +104,14 @@
 
 															</ol>
 
-
-
 														</div>
+														<!-- Scripts -->
+														<script src="assets/js/jquery.min.js"></script>
+														<script src="assets/js/jquery.scrolly.min.js"></script>
+														<script src="assets/js/jquery.scrollex.min.js"></script>
+														<script src="assets/js/browser.min.js"></script>
+														<script src="assets/js/breakpoints.min.js"></script>
+														<script src="assets/js/util.js"></script>
+														<script src="assets/js/main.js"></script>
+								</body>
+								</html>
