--- a/generic2.html
+++ b/generic2.html
@@ -26,18 +26,19 @@
 					</header>
 
 				<!-- Menu -->
-					<nav id="menu">
-						<ul class="links">
-							<li><a href="index.html">Home</a></li>
-							<li><a href="Generic.html">Podcasts</a></li>
-							<li><a href="landing.html">Youtube</a></li>
-							<li><a href="elements.html">Blog Posts</a></li>
-						</ul>
-						<ul class="actions stacked">
-							<li><a href="#" class="button primary fit">Get Started</a></li>
-							<li><a href="#" class="button fit">Log In</a></li>
-						</ul>
-					</nav>
+				<nav id="menu">
+					<ul class="links">
+						<li><a href="index.html">Home</a></li>
+						<li><a href="Generic.html">Podcasts</a></li>
+						<li><a href="landing.html">Youtube</a></li>
+						<li><a href="generic2.html">Blog Posts</a></li>
+					</ul>
+					<ul class="actions stacked">
+						<li><a href="#" class="button primary fit">Get Started</a></li>
+						<li><a href="#" class="button fit">Log In</a></li>
+					</ul>
+				</nav>
+
 
 				<!-- Main -->
 					<div id="main" class="alt">
@@ -46,15 +47,19 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h1>Podcast</h1>
+										<h1>Blog Posts</h1>
 									</header>
-									<span class="image main"><img src="images/wave.jpg" alt="" /></span>
-									<h2>CS and CW Collide</h2>
+									<img src="images/writing.jpg" alt="" />
+									<h3>Social Media Funerals: When Is It Time To Log Off? </h3>
+									<p> Kobe Bryant's sudden death shocked the world, is it okay to not want to grieve too much? <a href="https://medium.com/@jonathan18/social-media-funerals-when-is-time-to-log-off-912501d43288" target="_blank"> Link to Article </a> </p>
 
-									<p> <a href="https://soundcloud.com/ipr-firstandbest/turtles-podcast-final-cw-and-cs-collide"> Hear </a>  creative writing majors and computer science majors discuss how creativity is used in their respective fields. </p>
-									<i class="fab fa-soundcloud"></i>
-									<p> <a href="https://www.inc.com/christina-desmarais/25-ways-to-be-more-creative.html"> Learn 25 ways to be creative   </p>
-									<p></p>
+
+
+									<h3> Living With Albums In The Digital Age </h3>
+							<p>In a time where it's hard for an album to live longer than a week, we must still give bodies of work the patience they deserve. <a href="https://medium.com/@jonathan18/living-with-albums-in-the-digital-age-917e45efce7f" target="_blank"> Link to article </a>
+									</p>
+
+									<i class="fab fa-medium"></i>
 								</div>
 							</section>
 
