--- a/generic2.html
+++ b/generic2.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="generic.html" class="logo"><strong>Jonathan</strong> <span>Kabongo</span></a>
+						<a href="index.html" class="logo"><strong>Jonathan</strong> <span>Kabongo</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -69,9 +69,19 @@
 
 
 				<!-- Footer -->
-				<footer>
-					<small>&copy; Copyright 2020, Jonthan Kabongo</small>
-				</footer>
+				</article>
+							</section>
+						</div>
+						<footer id="footer">
+							<div class="inner">
+								<ul class="copyright">
+									<li> © Jonathan Kabongo </li>
+									<li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+									<li>Images: <a href="https://unsplash.com">Unsplash</a></li>
+								</ul>
+							</div>
+						</footer>
+					</div>
 
 
 
