--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ Forty By HTML5 UP
 						<li><a href="Index.html">Home</a></li>
 						<li><a href="Generic.html">Podcasts</a></li>
 						<li><a href="landing.html">Youtube</a></li>
-						<li><a href="elements.html">Blog Posts</a></li>
+						<li><a href="generic2.html">Blog Posts</a></li>
 						<li><a href="elements2.html">Links</a></li>
 
 					</ul>
@@ -77,7 +77,7 @@ Forty By HTML5 UP
 									<span class="image">
 									</span>
 									<header class="major">
-										<h3><a href="elements.html" class="link">Blog Posts</a></h3>
+										<h3><a href="generic2.html" class="link">Blog Posts</a></h3>
 										<img src="images/medium.jpg"?>
 										<p>All thoughts and opinions on topics that intrigue me </p>
 									</header>
