--- a/generic.html
+++ b/generic.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="generic.html" class="logo"><strong>Jonathan</strong> <span>Kabongo</span></a>
+						<a href="Index.html" class="logo"><strong>Jonathan</strong> <span>Kabongo</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -31,7 +31,7 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="Generic.html">Podcasts</a></li>
 							<li><a href="landing.html">Youtube</a></li>
-							<li><a href="elements.html">Blog Posts</a></li>
+							<li><a href="generic2.html">Blog Posts</a></li>
 						</ul>
 						<ul class="actions stacked">
 							<li><a href="#" class="button primary fit">Get Started</a></li>
