--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ Forty By HTML5 UP
 						<li><a href="Generic.html">Podcasts</a></li>
 						<li><a href="landing.html">Youtube</a></li>
 						<li><a href="generic2.html">Blog Posts</a></li>
-						<li><a href="elements2.html">Links</a></li>
+						<li><a href="generic3.html">Links</a></li>
 
 					</ul>
 					<ul class="actions stacked">
