--- a/generic.html
+++ b/generic.html
@@ -32,6 +32,7 @@
 							<li><a href="Generic.html">Podcasts</a></li>
 							<li><a href="landing.html">Youtube</a></li>
 							<li><a href="generic2.html">Blog Posts</a></li>
+							<li><a href="generic3.html">Links</a></li>
 						</ul>
 						<ul class="actions stacked">
 							<li><a href="#" class="button primary fit">Get Started</a></li>
@@ -53,7 +54,7 @@
 
 									<p> <a href="https://soundcloud.com/ipr-firstandbest/turtles-podcast-final-cw-and-cs-collide"> Hear </a>  creative writing majors and computer science majors discuss how creativity is used in their respective fields. </p>
 									<i class="fab fa-soundcloud"></i>
-									<p> <a href="https://www.inc.com/christina-desmarais/25-ways-to-be-more-creative.html"> Learn 25 ways to be creative   </p>
+									<p> <a href="https://www.inc.com/christina-desmarais/25-ways-to-be-more-creative.html"> Learn 25 ways to be creative </a>  </p>
 									<p></p>
 								</div>
 							</section>
@@ -64,9 +65,15 @@
 
 
 				<!-- Footer -->
-				<footer>
-					<small>&copy; Copyright 2020, Jonthan Kabongo</small>
-				</footer>
+				<footer id="footer">
+				<div class="inner">
+					<ul class="copyright">
+						<li>© Jonathan Kabongo</li>
+						<li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+						<li>Images: <a href="https://unsplash.com">Unsplash</a></li>
+					</ul>
+				</div>
+			</footer>
 
 
 
