--- a/generic3.html
+++ b/generic3.html
@@ -32,6 +32,7 @@
 							<li><a href="Generic.html">Podcasts</a></li>
 							<li><a href="landing.html">Youtube</a></li>
 							<li><a href="generic2.html">Blog Posts</a></li>
+							<li><a href="generic3.html">Links</a></li>
 						</ul>
 						<ul class="actions stacked">
 							<li><a href="#" class="button primary fit">Get Started</a></li>
@@ -45,16 +46,16 @@
 						<!-- One -->
 							<section id="one">
 								<div class="inner">
-									<header class="major">
-										<h1>Podcast</h1>
-									</header>
-									<span class="image main"><img src="images/wave.jpg" alt="" /></span>
-									<h2>CS and CW Collide</h2>
 
-									<p> <a href="https://soundcloud.com/ipr-firstandbest/turtles-podcast-final-cw-and-cs-collide"> Hear </a>  creative writing majors and computer science majors discuss how creativity is used in their respective fields. </p>
-									<i class="fab fa-soundcloud"></i>
-									<p> <a href="https://www.inc.com/christina-desmarais/25-ways-to-be-more-creative.html"> Learn 25 ways to be creative   </p>
-									<p></p>
+
+									<h2>Music by Me</h2>
+									<img src="images/ref.jpg">
+									<img src="images/chap.jpg">
+
+									<p> <a href="https://music.apple.com/us/artist/jon-kabongo/1474932351">Apple Music</p>
+									<p> <a href="https://open.spotify.com/artist/5TV0Pt6R4nYsaPhlbgLJeO">Spotify</p>
+
+
 								</div>
 							</section>
 
@@ -64,10 +65,15 @@
 
 
 				<!-- Footer -->
-				<footer>
-					<small>&copy; Copyright 2020, Jonthan Kabongo</small>
-				</footer>
-
+				<footer id="footer">
+				<div class="inner">
+					<ul class="copyright">
+						<li>© Jonathan Kabongo</li>
+						<li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+						<li>Images: <a href="https://unsplash.com">Unsplash</a></li>
+					</ul>
+				</div>
+			</footer>
 
 
 			</div>
