--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ Forty By HTML5 UP
 
 									</span>
 									<header class="major">
-										<h3><a href="elements2.html" class="link">Links</a
+										<h3><a href="generic3.html" class="link">Links</a
 										></h3>
 											<img src="images/mic.jpg" alt= ""/>
 											<p>	Vibes from me
