--- a/generic3.html
+++ b/generic3.html
@@ -49,11 +49,11 @@
 
 
 									<h2>Music by Me</h2>
-									<img src="images/ref.jpg">
+									<img src="images/Ref.jpg">
 									<img src="images/chap.jpg">
 
-									<p> <a href="https://music.apple.com/us/artist/jon-kabongo/1474932351">Apple Music</p>
-									<p> <a href="https://open.spotify.com/artist/5TV0Pt6R4nYsaPhlbgLJeO">Spotify</p>
+									<p> <a href="https://music.apple.com/us/artist/jon-kabongo/1474932351">Apple Music </a></p>
+									<p> <a href="https://open.spotify.com/artist/5TV0Pt6R4nYsaPhlbgLJeO">Spotify</a> </p>
 
 
 								</div>
