--- a/generic2.html
+++ b/generic2.html
@@ -32,6 +32,7 @@
 						<li><a href="Generic.html">Podcasts</a></li>
 						<li><a href="landing.html">Youtube</a></li>
 						<li><a href="generic2.html">Blog Posts</a></li>
+						<li><a href="generic3.html">Links</a></li>
 					</ul>
 					<ul class="actions stacked">
 						<li><a href="#" class="button primary fit">Get Started</a></li>
