--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ Forty By HTML5 UP
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<a href="Index.html" class="logo"><strong>Jonathan</strong> <span>Kabongo</span></a>
+						<a href="index.html" class="logo"><strong>Jonathan</strong> <span>Kabongo</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -90,7 +90,7 @@ Forty By HTML5 UP
 										<h3><a href="generic.html" class="link">Podcast</a></h3>
 										<img src= "images/soundcloud.jpg"/>
 
-										<p>Listen to me and friends talk about how we're creative in different fields</p>
+										<p>Listen to friends and I talk about how we're creative in different fields</p>
 									</header>
 								</article>
 								<article>
