--- a/generic2.html
+++ b/generic2.html
@@ -18,12 +18,12 @@
 			<div id="wrapper">
 
 				<!-- Header -->
-					<header id="header">
-						<a href="index.html" class="logo"><strong>Jonathan</strong> <span>Kabongo</span></a>
-						<nav>
-							<a href="#menu">Menu</a>
-						</nav>
-					</header>
+				<header id="header" class="alt style2">
+					<a href="index.html" class="logo"><strong>Jonathan</strong> <span>Kabongo</span></a>
+					<nav>
+						<a href="#menu">Menu</a>
+					</nav>
+				</header>
 
 				<!-- Menu -->
 				<nav id="menu">
