--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ Forty By HTML5 UP
 								<p>Writer. Artist. Fan of self-expression.  </p>
 
 							</div>
-							<img src="images/head.jpg" alt=""/>
+							<img src="images/Head.jpg" alt=""/>
 
 						</div>
 					</section>
